# model-training

./: .gitignore  .pylintrc  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yaml  metric.yaml  pylint.yaml  pytest.yaml
checkers/: randomness_uncontrolled_np.py  randomness_uncontrolled_random.py  randomness_uncontrolled_tf.py
docs/: ACTIVITY.md
evaluation/: metrics.json
evaluation/plots/sklearn/: prc.json  roc.json
evaluation_results/: metrics.json
models/: .gitignore  trained_model.joblib.dvc
src/: model.py
src/data/: data_preprocessing.py  get_data.py
src/models/: define_model.py  evaluate_model.py  get_model.py  predict_model.py  train_model.py
tests/: test_passing.py
tests/data/: test_distribution.py  test_memory_usage.py
tests/features_and_data/: test_distribution.py  test_memory_usage.py
tests/ml_infrastructure/: test_AB.py  test_model_pipeline.py
tests/ml_monitoring/: test_model_staleness.py
tests/model_development/: test_data_slice.py  test_non_determinism_robustness.py
