[tool.poetry]
name = "remlaG2"
version = "0.0.3"
description = "An AI model that detects phising using a CNN."
authors = ["Rodin Haker <R.Haker@student.tudelft.nl>", "Arjan Hasami <A.Hasami@student.tudelft.nl>",
    "Nada Mouman <N.Mouman@student.tudelft.nl>", "Thijs Penning <T.J.Penning@student.tudelft.nl>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
absl-py = "2.1.0"
astunparse = "1.6.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
contourpy = "1.2.1"
cycler = "0.12.1"
dvc = "^3.50.1"
dvc-s3 = "^3.2.0"
flatbuffers = "24.3.25"
fonttools = "4.51.0"
gast = "0.5.4"
google-pasta = "0.2.0"
grpcio = "1.63.0"
h5py = "3.11.0"
idna = "3.7"
joblib = "1.4.2"
keras = "3.3.3"
kiwisolver = "1.4.5"
libclang = "18.1.1"
Markdown = "3.6"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
matplotlib = "3.8.4"
mdurl = "0.1.2"
ml-dtypes = "0.3.2"
namex = "0.0.8"
numpy = "1.26.4"
opt-einsum = "3.3.0"
optree = "0.11.0"
packaging = "24.0"
pandas = "2.2.2"
pillow = "10.3.0"
protobuf = "4.25.3"
Pygments = "2.17.2"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
requests = "2.31.0"
rich = "13.7.1"
scikit-learn = "1.4.2"
scipy = "1.13.0"
seaborn = "0.13.2"
setuptools = "69.5.1"
six = "1.16.0"
tensorboard = "2.16.2"
tensorboard-data-server = "0.7.2"
tensorflow = [
    { version = "^2.16.1", extras = ["and-cuda"], markers = "sys_platform == 'linux'" },
    { version = "^2.16.1", markers = "sys_platform != 'linux'" }
]
tensorflow-intel = {version = "^2.16.1", markers = "sys_platform == 'win32'"}
tensorrt-cu12 = {version = "^10.0.1", source = "nvidia", markers = "sys_platform == 'linux'", optional = true}
tensorrt-cu12-bindings = {version = "^10.0.1", source = "nvidia", markers = "sys_platform == 'linux'", optional = true}
tensorrt-cu12-libs = {version = "^10.0.1", source = "nvidia", markers = "sys_platform == 'linux'", optional = true}
termcolor = "2.4.0"
threadpoolctl = "3.5.0"
typing_extensions = "4.11.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
Werkzeug = "3.0.2"
wheel = "0.43.0"
wrapt = "1.16.0"
lib-ml-remla24-team02 = "^2.0.0"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[tool.poetry.extras]
tensorrt = ["tensorrt-cu12", "tensorrt-cu12-bindings", "tensorrt-cu12-libs"]

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.2.1"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']